forgot to push before trip

--- a/assets/templates/hud.hbs
+++ b/assets/templates/hud.hbs
@@ -1,2 +1,8 @@
-<img src="/images/video-holder.jpg" class="video"/>
-<div id="toolbar"></div>
+<div class="video-container">
+	<img src="/images/video-holder.jpg" class="video"/>
+</div>
+<ul class="control-menu">
+	<li></li>
+	<li></li>
+</ul>
+<div class="toolbar"></div>
