--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -10,7 +10,7 @@ $experimental-support-for-mozilla      : true;
 
 $highlight-color: #3bd2cd;
 
-$bg-color: #101b1d;
+$bg-color: #222;
 $bg-dark-color: darken($bg-color, 20%);
 $bg-light-color: mix($bg-color, $highlight-color, 98%);
 
@@ -64,25 +64,47 @@ body {
 canvas {
 	display: block;
 }
-#toolbar {
-  opacity: 0.9;
-  width: 100%;
-  position: fixed;
+.toolbar {
+  position: absolute;
   bottom: 0;
-  overflow: hidden;
-  min-height: 30px;
-  @include clearfix;
-  border: 1px solid rgba(0,0,0,0.5);
-  @include box-shadow(rgba(255,255,255,0.2) 0 1px 0 inset, rgba(0,0,0,0.5) 0 -3px 2px);
-  @include background(url($diamond-dark-2-pattern) repeat, linear-gradient(lighten(saturate($bg-color, 5%), 5%), darken($bg-color, 10%)));
+  left: 0;
+  .section {
+    @include single-box-shadow(#000, 0, 0, 1px);
+    @include border-radius(3px);
+    float: left;
+    margin: 3px;
+    background: #111;
+  }
+  // opacity: 0.95;
+  // width: 100%;
+  // position: fixed;
+  // bottom: 0;
+  // overflow: hidden;
+  // min-height: 30px;
+  // @include clearfix;
+  // border: 1px solid rgba(0,0,0,0.5);
+  // @include box-shadow(rgba(255,255,255,0.1) 0 1px 0 inset, rgba(0,0,0,0.3) 0 -3px 2px);
+  // @include background(url($diamond-dark-2-pattern) repeat, linear-gradient(lighten(saturate($bg-color, 5%), 2%), darken($bg-color, 10%)));
 }
 #container {
 	@include clearfix;
 }
-.video {
+.video-container {
+  position: relative;
   margin: 2em auto;
   max-width: 90%;
-  display: block;
+
+  .video {
+    display: block;
+    width: 100%;
+  }
+  .joystick {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
 }
 .section {
 	// background: $bg-light-color;
@@ -94,6 +116,11 @@ canvas {
 	float: left;
 	-webkit-transform: rotateY(0); 
 	-webkit-backface-visibility: hidden;
+}
+.section-label {
+  font-size: 0.8em;
+  color: #444;
+  letter-spacing: 0.04;
 }
 .media, .media-list li { 
   overflow: hidden;
