--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,7 @@ html * {
 
 /* line 56, ../../assets/stylesheets/style.scss */
 body {
-  background: #101b1d;
+  background: #222222;
   overflow: hidden;
   font-family: uweb-webfont;
   color: #dcd6ca;
@@ -39,36 +39,50 @@ canvas {
 }
 
 /* line 67, ../../assets/stylesheets/style.scss */
-#toolbar {
-  opacity: 0.9;
-  width: 100%;
-  position: fixed;
+.toolbar {
+  position: absolute;
   bottom: 0;
-  overflow: hidden;
-  min-height: 30px;
-  overflow: hidden;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: rgba(255, 255, 255, 0.2) 0 1px 0 inset, rgba(0, 0, 0, 0.5) 0 -3px 2px;
-  -moz-box-shadow: rgba(255, 255, 255, 0.2) 0 1px 0 inset, rgba(0, 0, 0, 0.5) 0 -3px 2px;
-  box-shadow: rgba(255, 255, 255, 0.2) 0 1px 0 inset, rgba(0, 0, 0, 0.5) 0 -3px 2px;
-  background: url("/images/diamond_dark_texture_2_128.png") repeat, -webkit-linear-gradient(#172c2f, #000000);
-  background: url("/images/diamond_dark_texture_2_128.png") repeat, -moz-linear-gradient(#172c2f, #000000);
-  background: url("/images/diamond_dark_texture_2_128.png") repeat, linear-gradient(#172c2f, #000000);
+  left: 0;
+}
+/* line 71, ../../assets/stylesheets/style.scss */
+.toolbar .section {
+  -webkit-box-shadow: 0 0 1px black;
+  -moz-box-shadow: 0 0 1px black;
+  box-shadow: 0 0 1px black;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  float: left;
+  margin: 3px;
+  background: #111;
 }
 
-/* line 79, ../../assets/stylesheets/style.scss */
+/* line 89, ../../assets/stylesheets/style.scss */
 #container {
   overflow: hidden;
 }
 
-/* line 82, ../../assets/stylesheets/style.scss */
-.video {
+/* line 92, ../../assets/stylesheets/style.scss */
+.video-container {
+  position: relative;
   margin: 2em auto;
   max-width: 90%;
+}
+/* line 97, ../../assets/stylesheets/style.scss */
+.video-container .video {
   display: block;
+  width: 100%;
+}
+/* line 101, ../../assets/stylesheets/style.scss */
+.video-container .joystick {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
-/* line 87, ../../assets/stylesheets/style.scss */
+/* line 109, ../../assets/stylesheets/style.scss */
 .section {
   min-width: 60px;
   min-height: 60px;
@@ -82,35 +96,42 @@ canvas {
   -webkit-backface-visibility: hidden;
 }
 
-/* line 98, ../../assets/stylesheets/style.scss */
+/* line 120, ../../assets/stylesheets/style.scss */
+.section-label {
+  font-size: 0.8em;
+  color: #444;
+  letter-spacing: 0.04;
+}
+
+/* line 125, ../../assets/stylesheets/style.scss */
 .media, .media-list li {
   overflow: hidden;
   _overflow: visible;
   zoom: 1;
   margin: 10px;
 }
-/* line 103, ../../assets/stylesheets/style.scss */
+/* line 130, ../../assets/stylesheets/style.scss */
 .media .avatar, .media .img, .media .icon, .media-list li .avatar, .media-list li .img, .media-list li .icon {
   float: left;
   margin-right: 10px;
 }
-/* line 103, ../../assets/stylesheets/style.scss */
+/* line 130, ../../assets/stylesheets/style.scss */
 .media .avatar img, .media .img img, .media .icon img, .media-list li .avatar img, .media-list li .img img, .media-list li .icon img {
   display: block;
 }
-/* line 104, ../../assets/stylesheets/style.scss */
+/* line 131, ../../assets/stylesheets/style.scss */
 .media .content, .media-list li .content {
   overflow: hidden;
   _overflow: visible;
   zoom: 1;
 }
-/* line 109, ../../assets/stylesheets/style.scss */
+/* line 136, ../../assets/stylesheets/style.scss */
 .media .menu, .media-list li .menu {
   float: right;
   margin-left: 10px;
 }
 
-/* line 111, ../../assets/stylesheets/style.scss */
+/* line 138, ../../assets/stylesheets/style.scss */
 .notification {
   background: rgba(59, 210, 205, 0.8);
   font-size: 1.8em;
@@ -130,11 +151,11 @@ canvas {
   opacity: 1;
 }
 
-/* line 121, ../../assets/stylesheets/style.scss */
+/* line 148, ../../assets/stylesheets/style.scss */
 .circular-graph {
   position: relative;
 }
-/* line 123, ../../assets/stylesheets/style.scss */
+/* line 150, ../../assets/stylesheets/style.scss */
 .circular-graph .digit {
   position: absolute;
   text-align: center;
@@ -146,32 +167,32 @@ canvas {
   font-weight: bold;
 }
 
-/* line 134, ../../assets/stylesheets/style.scss */
+/* line 161, ../../assets/stylesheets/style.scss */
 .animated {
   -webkit-animation: 1s ease both;
   -moz-animation: 1s ease both;
   animation: 1s ease both;
 }
-/* line 136, ../../assets/stylesheets/style.scss */
+/* line 163, ../../assets/stylesheets/style.scss */
 .animated.slow {
   -webkit-animation-duration: 3s;
   -moz-animation-duration: 3s;
   animation-duration: 3s;
 }
-/* line 137, ../../assets/stylesheets/style.scss */
+/* line 164, ../../assets/stylesheets/style.scss */
 .animated.fast {
   -webkit-animation-duration: 0.35s;
   -moz-animation-duration: 0.35s;
   animation-duration: 0.35s;
 }
-/* line 138, ../../assets/stylesheets/style.scss */
+/* line 165, ../../assets/stylesheets/style.scss */
 .animated.none {
   -webkit-animation: blank 0.01s 1;
   -moz-animation: blank 0.01s 1;
   animation: blank 0.01s 1;
 }
 
-/* line 140, ../../assets/stylesheets/style.scss */
+/* line 167, ../../assets/stylesheets/style.scss */
 .foldInDown, .foldOutUp {
   -webkit-animation-timing-function: cubic-bezier(0, 0.025, 0.5, 0.25);
   -moz-animation-timing-function: cubic-bezier(0, 0.025, 0.5, 0.25);
@@ -187,28 +208,28 @@ canvas {
   transform-style: preseve-3d;
 }
 
-/* line 157, ../../assets/stylesheets/style.scss */
+/* line 184, ../../assets/stylesheets/style.scss */
 .fadeInUp {
   -webkit-animation-name: fadeInUp;
   -moz-animation-name: fadeInUp;
   animation-name: fadeInUp;
 }
 
-/* line 157, ../../assets/stylesheets/style.scss */
+/* line 184, ../../assets/stylesheets/style.scss */
 .fadeOutDown {
   -webkit-animation-name: fadeOutDown;
   -moz-animation-name: fadeOutDown;
   animation-name: fadeOutDown;
 }
 
-/* line 157, ../../assets/stylesheets/style.scss */
+/* line 184, ../../assets/stylesheets/style.scss */
 .foldInUp {
   -webkit-animation-name: foldInUp;
   -moz-animation-name: foldInUp;
   animation-name: foldInUp;
 }
 
-/* line 157, ../../assets/stylesheets/style.scss */
+/* line 184, ../../assets/stylesheets/style.scss */
 .foldOutDown {
   -webkit-animation-name: foldOutDown;
   -moz-animation-name: foldOutDown;
@@ -216,14 +237,14 @@ canvas {
 }
 
 @-moz-keyframes fadeInUp {
-  /* line 167, ../../assets/stylesheets/style.scss */
+  /* line 194, ../../assets/stylesheets/style.scss */
   0% {
     -moz-transform: translateY(20px);
     transform: translateY(20px);
     opacity: 0;
   }
 
-  /* line 170, ../../assets/stylesheets/style.scss */
+  /* line 197, ../../assets/stylesheets/style.scss */
   100% {
     -moz-transform: translateY(0);
     transform: translateY(0);
@@ -232,14 +253,14 @@ canvas {
 }
 
 @-webkit-keyframes fadeInUp {
-  /* line 167, ../../assets/stylesheets/style.scss */
+  /* line 194, ../../assets/stylesheets/style.scss */
   0% {
     -webkit-transform: translateY(20px);
     transform: translateY(20px);
     opacity: 0;
   }
 
-  /* line 170, ../../assets/stylesheets/style.scss */
+  /* line 197, ../../assets/stylesheets/style.scss */
   100% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
@@ -248,13 +269,13 @@ canvas {
 }
 
 @keyframes fadeInUp {
-  /* line 167, ../../assets/stylesheets/style.scss */
+  /* line 194, ../../assets/stylesheets/style.scss */
   0% {
     transform: translateY(20px);
     opacity: 0;
   }
 
-  /* line 170, ../../assets/stylesheets/style.scss */
+  /* line 197, ../../assets/stylesheets/style.scss */
   100% {
     transform: translateY(0);
     opacity: 1;
@@ -262,14 +283,14 @@ canvas {
 }
 
 @-moz-keyframes fadeOutDown {
-  /* line 175, ../../assets/stylesheets/style.scss */
+  /* line 202, ../../assets/stylesheets/style.scss */
   0% {
     -moz-transform: translateY(0);
     transform: translateY(0);
     opacity: 1;
   }
 
-  /* line 178, ../../assets/stylesheets/style.scss */
+  /* line 205, ../../assets/stylesheets/style.scss */
   100% {
     -moz-transform: translateY(20px);
     transform: translateY(20px);
@@ -278,14 +299,14 @@ canvas {
 }
 
 @-webkit-keyframes fadeOutDown {
-  /* line 175, ../../assets/stylesheets/style.scss */
+  /* line 202, ../../assets/stylesheets/style.scss */
   0% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
     opacity: 1;
   }
 
-  /* line 178, ../../assets/stylesheets/style.scss */
+  /* line 205, ../../assets/stylesheets/style.scss */
   100% {
     -webkit-transform: translateY(20px);
     transform: translateY(20px);
@@ -294,13 +315,13 @@ canvas {
 }
 
 @keyframes fadeOutDown {
-  /* line 175, ../../assets/stylesheets/style.scss */
+  /* line 202, ../../assets/stylesheets/style.scss */
   0% {
     transform: translateY(0);
     opacity: 1;
   }
 
-  /* line 178, ../../assets/stylesheets/style.scss */
+  /* line 205, ../../assets/stylesheets/style.scss */
   100% {
     transform: translateY(20px);
     opacity: 0;
@@ -308,17 +329,17 @@ canvas {
 }
 
 @-moz-keyframes foldInUp {
-  /* line 183, ../../assets/stylesheets/style.scss */
+  /* line 210, ../../assets/stylesheets/style.scss */
   0% {
     -moz-transform: perspective(1000px) rotateX(90deg) rotateZ(0deg) translateY(0.75em);
     transform: perspective(1000px) rotateX(90deg) rotateZ(0deg) translateY(0.75em);
     -moz-transform-origin: 0 0;
     transform-origin: 0 0;
-    background: #101b1d;
+    background: #222222;
     height: 0;
   }
 
-  /* line 189, ../../assets/stylesheets/style.scss */
+  /* line 216, ../../assets/stylesheets/style.scss */
   100% {
     -moz-transform: perspective(1000px) rotateX(0deg) rotateZ(0deg) translateY(0em);
     transform: perspective(1000px) rotateX(0deg) rotateZ(0deg) translateY(0em);
@@ -330,17 +351,17 @@ canvas {
 }
 
 @-webkit-keyframes foldInUp {
-  /* line 183, ../../assets/stylesheets/style.scss */
+  /* line 210, ../../assets/stylesheets/style.scss */
   0% {
     -webkit-transform: perspective(1000px) rotateX(90deg) rotateZ(0deg) translateY(0.75em);
     transform: perspective(1000px) rotateX(90deg) rotateZ(0deg) translateY(0.75em);
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
-    background: #101b1d;
+    background: #222222;
     height: 0;
   }
 
-  /* line 189, ../../assets/stylesheets/style.scss */
+  /* line 216, ../../assets/stylesheets/style.scss */
   100% {
     -webkit-transform: perspective(1000px) rotateX(0deg) rotateZ(0deg) translateY(0em);
     transform: perspective(1000px) rotateX(0deg) rotateZ(0deg) translateY(0em);
@@ -352,15 +373,15 @@ canvas {
 }
 
 @keyframes foldInUp {
-  /* line 183, ../../assets/stylesheets/style.scss */
+  /* line 210, ../../assets/stylesheets/style.scss */
   0% {
     transform: perspective(1000px) rotateX(90deg) rotateZ(0deg) translateY(0.75em);
     transform-origin: 0 0;
-    background: #101b1d;
+    background: #222222;
     height: 0;
   }
 
-  /* line 189, ../../assets/stylesheets/style.scss */
+  /* line 216, ../../assets/stylesheets/style.scss */
   100% {
     transform: perspective(1000px) rotateX(0deg) rotateZ(0deg) translateY(0em);
     transform-origin: 0 0;
@@ -370,36 +391,36 @@ canvas {
 }
 
 @-moz-keyframes foldOutDown {
-  /* line 198, ../../assets/stylesheets/style.scss */
+  /* line 225, ../../assets/stylesheets/style.scss */
   0% {
     opacity: 1;
   }
 
-  /* line 201, ../../assets/stylesheets/style.scss */
+  /* line 228, ../../assets/stylesheets/style.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-webkit-keyframes foldOutDown {
-  /* line 198, ../../assets/stylesheets/style.scss */
+  /* line 225, ../../assets/stylesheets/style.scss */
   0% {
     opacity: 1;
   }
 
-  /* line 201, ../../assets/stylesheets/style.scss */
+  /* line 228, ../../assets/stylesheets/style.scss */
   100% {
     opacity: 0;
   }
 }
 
 @keyframes foldOutDown {
-  /* line 198, ../../assets/stylesheets/style.scss */
+  /* line 225, ../../assets/stylesheets/style.scss */
   0% {
     opacity: 1;
   }
 
-  /* line 201, ../../assets/stylesheets/style.scss */
+  /* line 228, ../../assets/stylesheets/style.scss */
   100% {
     opacity: 0;
   }
