--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -92,8 +92,7 @@ canvas {
 .video-container {
   position: relative;
   margin: 2em auto;
-  max-width: 90%;
-
+  width: 90%;
   .video {
     display: block;
     width: 100%;
