change camera to use mjpg-streamer

--- a/assets/templates/hud.hbs
+++ b/assets/templates/hud.hbs
@@ -1,4 +1,4 @@
 <div class="video-container">
-	<img src="/images/video-holder.jpg" class="video"/>
+	<img src="http://192.168.0.192:8080/?action=stream" class="video"/>
 </div>
 <div class="toolbar"></div>
