--- a/assets/templates/layout.hbs
+++ b/assets/templates/layout.hbs
@@ -4,7 +4,7 @@
   <link rel='stylesheet' href='/stylesheets/style.css'>
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <script type='text/javascript' src='/javascripts/jquery-1.8.0.min.js'></script>
-  <script type='text/javascript' src=" http://192.168.0.192:3001/socket.io.js"></script>
+  <script type='text/javascript' src="/socket.io/socket.io.js"></script>
   <script type='text/javascript' src='/javascripts/vendor.min.js'></script>
 </head>
 <body>
