unminifed for testing

--- a/assets/templates/index.hbs
+++ b/assets/templates/index.hbs
@@ -8,7 +8,7 @@
   };
 </script>
 <script type='text/javascript' src="/javascripts/medibot-templates.min.js"></script>
-<script type='text/javascript' src="/javascripts/medibot-client.min.js"></script>
+<script type='text/javascript' src="/javascripts/medibot-client.js"></script>
 <script>
 	(function ($) {
 		hud = new Medibot.Views.Hud;
